objects/SYS_OpportunityHistory__c.object
<CustomObject>
    <description>Object used to store opportunity history from the SYS production evnrionment prior to Connect 5 go-live on June 14, 2010. This is read only data.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDateForInsert__c</fullName>
        <label>Created Date For Insert</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastCategory__c</fullName>
        <label>Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Duration_Days__c</fullName>
        <formula>CreatedDate__c - PrevForecastUpdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Duration (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FromForecastCategory__c</fullName>
        <label>From Forecast Category</label>
        <picklist>
            <picklistValues>
                <fullName>Best Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FromOpportunityStageName__c</fullName>
        <label>From Opportunity Stage Name</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Prospect Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Information Provided by Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4- Budgetary Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Firm Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Strategy/Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Proposal Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Dormant (Lost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Negotiation &amp; Cost Refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (12%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (25%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (50%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (90%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Commission Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalize Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm Proposal Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Commission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SYS_OpportunityHistorys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrevForecastUpdate__c</fullName>
        <label>Prev Forecast Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PrevOpportunityStageUpdate__c</fullName>
        <label>Prev Opportunity Stage Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>55%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>Stage Name</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Prospect Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2- Initial Discussion/ Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3- Information Provided by Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4- Budgetary Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5- Firm Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6- Acceptance &amp; Contract Negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7- Signed Master Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bid Strategy/Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary Proposal Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed/Dormant (Lost)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Negotiation &amp; Cost Refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (12%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (25%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (50%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Review/Negotiation (90%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Commission Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage_Duration_Days__c</fullName>
        <formula>CreatedDate__c - PrevOpportunityStageUpdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValidThroughDate__c</fullName>
        <label>Valid Through Date</label>
        <type>DateTime</type>
    </fields>
    <label>Opportunity History before June 11, 2010</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Opportunity History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity History before June 11, 2010</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>